tests/ui/pattern/rfc-3627-match-ergonomics-2024/experimental/ref-mut-inside-shared-ref-pat.structural2024.stderr
error[E0596]: cannot borrow as mutable inside an `&` pattern
  --> $DIR/ref-mut-inside-shared-ref-pat.rs:14:31
   |
LL |     if let Some(&Some(ref mut x)) = &mut Some(Some(0)) {
   |                 -             ^
   |                 |
   |                 help: replace this `&` with `&mut`: `&mut`

error[E0596]: cannot borrow as mutable inside an `&` pattern
  --> $DIR/ref-mut-inside-shared-ref-pat.rs:20:31
   |
LL |     if let &Some(Some(ref mut x)) = &mut Some(Some(0)) {
   |            -                  ^
   |            |
   |            help: replace this `&` with `&mut`: `&mut`

error[E0596]: cannot borrow as mutable inside an `&` pattern
  --> $DIR/ref-mut-inside-shared-ref-pat.rs:29:15
   |
LL |     let &pat!(x) = &mut 0;
   |         -     ^
   |         |
   |         help: replace this `&` with `&mut`: `&mut`

error[E0596]: cannot borrow as mutable inside an `&` pattern
  --> $DIR/ref-mut-inside-shared-ref-pat.rs:34:19
   |
LL |     let &(ref mut a, ref mut b) = &mut (true, false);
   |         -         ^
   |         |
   |         help: replace this `&` with `&mut`: `&mut`

error[E0596]: cannot borrow as mutable inside an `&` pattern
  --> $DIR/ref-mut-inside-shared-ref-pat.rs:34:30
   |
LL |     let &(ref mut a, ref mut b) = &mut (true, false);
   |         -                    ^
   |         |
   |         help: replace this `&` with `&mut`: `&mut`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0596`.
